# VS_Code_Exercises

./: Files_In_Excel.ipynb  Itemclassex.xlsx  Itemex.xlsx  README.md  Test.ipynb  hello_world.ipynb
Volunteer/: Recommend.py  list_of_locations.py  nearest_location.py  volunteer_info.py
volunteer_package/: .gitignore  LICENSE  README.md  setup.cfg
volunteer_package/src/volunteer/: Recommend.py  list_of_locations.py
volunteer_package/src/volunteer_pkg_dylanpicart.egg-info/: PKG-INFO  SOURCES.txt
