[metadata]
name = volunteer-pkg-dylanpicart
version = 0.0.1
author = Dylan Picart
author_email = dylanpicart@mail.adelphi.edu
description = A small package that helps users choose volunteer locations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanpicart/DSPractice.git
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src